添加保存章节到DB的功能